--- a/index.html
+++ b/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
     <main></main>
-    
-    <script src="script.js"></script>
+
+    <script type="module" src="script.js"></script>
 
 </body>
 </html>
